2003-09-21  Araki Ken  <arakiken@users.sf.net>

	* mlterm.spec,ml_char.h: minor fixes.

2003-09-20  Araki Ken  <arakiken@users.sf.net>

	* ml_char.[ch]: ml_char_t is 64bit in LP64 system. LSB 4bits of attr
	  are always valid even if characters combined.

2003-09-19  MINAMI Hirokazu  <minami@lissie.chem.s.u-tokyo.ac.jp>

	* x_dnd.c: code cleanup.

2003-09-18  Araki Ken  <arakiken@users.sf.net>

	* ml_char.[ch]: If ml_char_t combined or not could not be distinguished. Fixed.
	  (96bit in LP64 system now) (Thanks to Minami Hirokazu san)

2003-09-17  Seiichi SATO <ssato@sh.rim.or.jp>

	* doc/ja/README.sb: Fixed a typo.

2003-09-16  Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in : Disabled pixmap_engine by default.

	* README, README.ja, README.sb: Updated.

2003-09-16  MINAMI Hirokazu  <minami@mistfall.net>

	* ml_config_menu.c: call kik_remove_sig_child_listener()
	  when the config menu is finalized.

2003-09-15  Araki Ken  <arakiken@users.sf.net>

	* mlterm-menu/Makefile.in: Added $(SYSCONFDIR) target.

	* x_font_cache.c(x_get_font_name_list_for_fontset): Load "-*-*-medium-r-*--%d-*-*-*-*-*"
	  font by default for FontSet.

2003-09-15  Araki Ken  <arakiken@users.sf.net>

	* ml_char.[ch]: ml_char_t is 64bit in LP64 system.

2003-09-15  Araki Ken  <arakiken@users.sf.net>

	* x_term_manager.c(start_daemon,client_connected): If multiple mlterms
	  started with -j {genuine|blend} option, both of or either of them
	  could die. Fixed.

2003-09-15  MINAMI Hirokazu  <minami@mistfall.net>

	* x_term_manager.c:
	 - dead mask for screens is now also stored in u_long like
	the one for terms in ml_term_manager.c .
	 - renamed MAX_TERMS to MAX_SCREENS .
	
2003-09-15  Seiichi SATO <ssato@sh.rim.or.jp>

	* x_font_manager.c (x_get_fontset): Fixed a compile error with
	  --enable-debug.

2003-09-15  Araki Ken  <arakiken@users.sf.net>

	* configure.in: Added --enable-optimize-redrawing option.

2003-09-15  KATO Kazuyoshi  <kzys@users.sf.net>
