@@ -1,5 +1,9 @@
 2003-09-21  Araki Ken  <arakiken@users.sf.net>
 
+	* x_font_cache.c,x_font_custom.c: minor fixes.
+
+2003-09-21  Araki Ken  <arakiken@users.sf.net>
+
 	* mlterm.spec,ml_char.h: minor fixes.
 
 2003-09-20  Araki Ken  <arakiken@users.sf.net>
